# billiards-layouts-api

./: CMakeLists.txt  layouts_api.service
src/: FileLayoutManager.h  LayoutsList.h  LayoutsManager.h  RandomLayoutParams.h  RandomPositionsParams.h  UnqlManager.h  create_random_layout.h  layout_manager_impl.h  layouts_api.cpp
src/random_practice/: GenerationStatus.h  RandomPracticeParams.h  generate_random_practice.h  helpers.h  misc_shots.h  practice_common.h  run_out.h  strike_shots.h  unused.h
